--- a/Views/ConfigView.xaml
+++ b/Views/ConfigView.xaml
@@ -7,13 +7,13 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     d:Background="White"
     d:DesignHeight="600"
-    d:DesignWidth="800"
+    d:DesignWidth="1000"
     mc:Ignorable="d">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="100px" />
+            <ColumnDefinition Width="50px" />
             <ColumnDefinition Width="300px" />
-            <ColumnDefinition Width="100px" />
+            <ColumnDefinition Width="Auto" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="40px" />
@@ -40,14 +40,383 @@
         <Button
             Grid.Row="0"
             Grid.Column="2"
+            Width="100"
+            HorizontalAlignment="Left"
             VerticalAlignment="Center"
             Command="{Binding ProjectPathSearchCommand}"
             Content="Durchsuchen" />
 
-        <ListBox MaxHeight="400"
-            Grid.Row="1" Margin="20,0,20,0"
+        <ListBox
+            Grid.Row="1"
             Grid.Column="1"
-            MinHeight="400" DisplayMemberPath="EntityFileName"
-            ItemsSource="{Binding Endpoints, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+            MinHeight="400"
+            MaxHeight="400"
+            Margin="20,0,20,0"
+            DisplayMemberPath="EntityFileName"
+            ItemsSource="{Binding Endpoints, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+            SelectedItem="{Binding SelectedEndpoint, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+
+        <Grid Column="2" Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="200px" />
+                <ColumnDefinition Width="120px" />
+                <ColumnDefinition Width="100px" />
+                <ColumnDefinition Width="100px" />
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="40" />
+                <RowDefinition Height="5" />
+                <RowDefinition Height="40" />
+                <RowDefinition Height="5" />
+                <RowDefinition Height="40" />
+                <RowDefinition Height="5" />
+                <RowDefinition Height="40" />
+                <RowDefinition Height="5" />
+                <RowDefinition Height="40" />
+                <RowDefinition Height="5" />
+                <RowDefinition Height="40" />
+                <RowDefinition Height="5" />
+                <RowDefinition Height="40" />
+                <RowDefinition Height="5" />
+                <RowDefinition Height="40" />
+                <RowDefinition Height="5" />
+                <RowDefinition Height="40" />
+                <RowDefinition Height="5" />
+                <RowDefinition Height="40" />
+                <RowDefinition />
+            </Grid.RowDefinitions>
+            <Label
+                Grid.Row="0"
+                Grid.Column="0"
+                HorizontalContentAlignment="Center"
+                VerticalContentAlignment="Center"
+                Content="Controller" />
+            <Label
+                Grid.Row="0"
+                Grid.Column="1"
+                Width="100"
+                VerticalAlignment="Center"
+                HorizontalContentAlignment="Center"
+                VerticalContentAlignment="Center"
+                d:Background="Green"
+                d:Content="OK"
+                Background="{Binding ControllerStatusColor, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                Content="{Binding ControllerStatus, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+            <Button
+                Grid.Row="0"
+                Grid.Column="2"
+                Width="90"
+                VerticalAlignment="Center"
+                Command="{Binding AddCommand}"
+                CommandParameter="Controller"
+                Content="Hinzufügen" />
+            <Button
+                Grid.Row="0"
+                Grid.Column="3"
+                Width="90"
+                VerticalAlignment="Center"
+                Command="{Binding RemoveCommand}"
+                CommandParameter="Controller"
+                Content="Entfernen" />
+            <Label
+                Grid.Row="2"
+                Grid.Column="0"
+                Width="100"
+                VerticalAlignment="Center"
+                HorizontalContentAlignment="Center"
+                VerticalContentAlignment="Center"
+                Content="Service Interface" />
+            <Label
+                Grid.Row="2"
+                Grid.Column="1"
+                Width="100"
+                VerticalAlignment="Center"
+                HorizontalContentAlignment="Center"
+                VerticalContentAlignment="Center"
+                d:Background="Red"
+                d:Content="FEHLER"
+                Background="{Binding ServiceInterfaceStatusColor, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                Content="{Binding ServiceInterfaceStatus, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+            <Button
+                Grid.Row="2"
+                Grid.Column="2"
+                Width="90"
+                VerticalAlignment="Center"
+                Command="{Binding AddCommand}"
+                CommandParameter="Service"
+                Content="Hinzufügen" />
+            <Button
+                Grid.Row="2"
+                Grid.Column="3"
+                Width="90"
+                VerticalAlignment="Center"
+                Command="{Binding RemoveCommand}"
+                CommandParameter="Service"
+                Content="Entfernen" />
+            <Label
+                Grid.Row="4"
+                Grid.Column="0"
+                HorizontalContentAlignment="Center"
+                VerticalContentAlignment="Center"
+                Content="Service" />
+            <Label
+                Grid.Row="4"
+                Grid.Column="1"
+                Width="100"
+                VerticalAlignment="Center"
+                HorizontalContentAlignment="Center"
+                VerticalContentAlignment="Center"
+                d:Background="Green"
+                d:Content="OK"
+                Background="{Binding ServiceStatusColor, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                Content="{Binding ServiceStatus, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+            <Button
+                Grid.Row="4"
+                Grid.Column="2"
+                Width="90"
+                VerticalAlignment="Center"
+                Command="{Binding AddCommand}"
+                CommandParameter="ServiceImpl"
+                Content="Hinzufügen" />
+            <Button
+                Grid.Row="4"
+                Grid.Column="3"
+                Width="90"
+                VerticalAlignment="Center"
+                Command="{Binding RemoveCommand}"
+                CommandParameter="ServiceImpl"
+                Content="Entfernen" />
+            <Label
+                Grid.Row="6"
+                Grid.Column="0"
+                HorizontalContentAlignment="Center"
+                VerticalContentAlignment="Center"
+                Content="Repository" />
+            <Label
+                Grid.Row="6"
+                Grid.Column="1"
+                Width="100"
+                VerticalAlignment="Center"
+                HorizontalContentAlignment="Center"
+                VerticalContentAlignment="Center"
+                d:Background="Green"
+                d:Content="OK"
+                Background="{Binding RepositoryStatusColor, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                Content="{Binding RepositoryStatus, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+            <Button
+                Grid.Row="6"
+                Grid.Column="2"
+                Width="90"
+                VerticalAlignment="Center"
+                Command="{Binding AddCommand}"
+                CommandParameter="Repository"
+                Content="Hinzufügen" />
+            <Button
+                Grid.Row="6"
+                Grid.Column="3"
+                Width="90"
+                VerticalAlignment="Center"
+                Command="{Binding RemoveCommand}"
+                CommandParameter="Repository"
+                Content="Entfernen" />
+            <Label
+                Grid.Row="8"
+                Grid.Column="0"
+                HorizontalContentAlignment="Center"
+                VerticalContentAlignment="Center"
+                Content="Get Request" />
+            <Label
+                Grid.Row="8"
+                Grid.Column="1"
+                Width="100"
+                VerticalAlignment="Center"
+                HorizontalContentAlignment="Center"
+                VerticalContentAlignment="Center"
+                d:Background="Green"
+                d:Content="OK"
+                Background="{Binding GetRequestStatusColor, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                Content="{Binding GetRequestStatus, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+            <Button
+                Grid.Row="8"
+                Grid.Column="2"
+                Width="90"
+                VerticalAlignment="Center"
+                Command="{Binding AddCommand}"
+                CommandParameter="GetRequest"
+                Content="Hinzufügen" />
+            <Button
+                Grid.Row="8"
+                Grid.Column="3"
+                Width="90"
+                VerticalAlignment="Center"
+                Command="{Binding RemoveCommand}"
+                CommandParameter="GetRequest"
+                Content="Entfernen" />
+            <Label
+                Grid.Row="10"
+                Grid.Column="0"
+                HorizontalContentAlignment="Center"
+                VerticalContentAlignment="Center"
+                Content="Add Request" />
+            <Label
+                Grid.Row="10"
+                Grid.Column="1"
+                Width="100"
+                VerticalAlignment="Center"
+                HorizontalContentAlignment="Center"
+                VerticalContentAlignment="Center"
+                d:Background="Green"
+                d:Content="OK"
+                Background="{Binding AddRequestStatusColor, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                Content="{Binding AddRequestStatus, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+            <Button
+                Grid.Row="10"
+                Grid.Column="2"
+                Width="90"
+                VerticalAlignment="Center"
+                Command="{Binding AddCommand}"
+                CommandParameter="AddRequest"
+                Content="Hinzufügen" />
+            <Button
+                Grid.Row="10"
+                Grid.Column="3"
+                Width="90"
+                VerticalAlignment="Center"
+                Command="{Binding RemoveCommand}"
+                CommandParameter="AddRequest"
+                Content="Entfernen" />
+            <Label
+                Grid.Row="12"
+                Grid.Column="0"
+                HorizontalContentAlignment="Center"
+                VerticalContentAlignment="Center"
+                Content="Edit Request" />
+            <Label
+                Grid.Row="12"
+                Grid.Column="1"
+                Width="100"
+                VerticalAlignment="Center"
+                HorizontalContentAlignment="Center"
+                VerticalContentAlignment="Center"
+                d:Background="Green"
+                d:Content="OK"
+                Background="{Binding EditRequestStatusColor, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                Content="{Binding EditRequestStatus, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+            <Button
+                Grid.Row="12"
+                Grid.Column="2"
+                Width="90"
+                VerticalAlignment="Center"
+                Command="{Binding AddCommand}"
+                CommandParameter="EditRequest"
+                Content="Hinzufügen" />
+            <Button
+                Grid.Row="12"
+                Grid.Column="3"
+                Width="90"
+                VerticalAlignment="Center"
+                Command="{Binding RemoveCommand}"
+                CommandParameter="EditRequest"
+                Content="Entfernen" />
+            <Label
+                Grid.Row="14"
+                Grid.Column="0"
+                HorizontalContentAlignment="Center"
+                VerticalContentAlignment="Center"
+                Content="Delete Request" />
+            <Label
+                Grid.Row="14"
+                Grid.Column="1"
+                Width="100"
+                VerticalAlignment="Center"
+                HorizontalContentAlignment="Center"
+                VerticalContentAlignment="Center"
+                d:Background="Green"
+                d:Content="OK"
+                Background="{Binding DeleteRequestStatusColor, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                Content="{Binding DeleteRequestStatus, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+            <Button
+                Grid.Row="14"
+                Grid.Column="2"
+                Width="90"
+                VerticalAlignment="Center"
+                Command="{Binding AddCommand}"
+                CommandParameter="DeleteRequest"
+                Content="Hinzufügen" />
+            <Button
+                Grid.Row="14"
+                Grid.Column="3"
+                Width="90"
+                VerticalAlignment="Center"
+                Command="{Binding RemoveCommand}"
+                CommandParameter="DeleteRequest"
+                Content="Entfernen" />
+            <Label
+                Grid.Row="16"
+                Grid.Column="0"
+                HorizontalContentAlignment="Center"
+                VerticalContentAlignment="Center"
+                Content="Search Request" />
+            <Label
+                Grid.Row="16"
+                Grid.Column="1"
+                Width="100"
+                VerticalAlignment="Center"
+                HorizontalContentAlignment="Center"
+                VerticalContentAlignment="Center"
+                d:Background="Green"
+                d:Content="OK"
+                Background="{Binding SearchRequestStatusColor, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                Content="{Binding SearchRequestStatus, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+            <Button
+                Grid.Row="16"
+                Grid.Column="2"
+                Width="90"
+                VerticalAlignment="Center"
+                Command="{Binding AddCommand}"
+                CommandParameter="SearchRequest"
+                Content="Hinzufügen" />
+            <Button
+                Grid.Row="16"
+                Grid.Column="3"
+                Width="90"
+                VerticalAlignment="Center"
+                Command="{Binding RemoveCommand}"
+                CommandParameter="SearchRequest"
+                Content="Entfernen" />
+            <Label
+                Grid.Row="18"
+                Grid.Column="0"
+                HorizontalContentAlignment="Center"
+                VerticalContentAlignment="Center"
+                Content="Response" />
+            <Label
+                Grid.Row="18"
+                Grid.Column="1"
+                Width="100"
+                VerticalAlignment="Center"
+                HorizontalContentAlignment="Center"
+                VerticalContentAlignment="Center"
+                d:Background="Green"
+                d:Content="OK"
+                Background="{Binding ResponseStatusColor, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                Content="{Binding ResponseStatus, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+            <Button
+                Grid.Row="18"
+                Grid.Column="2"
+                Width="90"
+                VerticalAlignment="Center"
+                Command="{Binding AddCommand}"
+                CommandParameter="Response"
+                Content="Hinzufügen" />
+            <Button
+                Grid.Row="18"
+                Grid.Column="3"
+                Width="90"
+                VerticalAlignment="Center"
+                Command="{Binding RemoveCommand}"
+                CommandParameter="Response"
+                Content="Entfernen" />
+        </Grid>
     </Grid>
 </UserControl>
