--- a/Views/ConfigView.xaml
+++ b/Views/ConfigView.xaml
@@ -6,10 +6,10 @@
     xmlns:local="clr-namespace:DamagoApiHelper.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     d:Background="White"
-    d:DesignHeight="700"
-    d:DesignWidth="1000"
+    d:DesignHeight="600"
+    d:DesignWidth="800"
     mc:Ignorable="d">
-    <StackPanel Orientation="Horizontal">
+    <StackPanel Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center">
         <StackPanel Width="300" Orientation="Vertical">
             <GroupBox
                 Margin="10,10,0,0"
@@ -20,7 +20,7 @@
                         Margin="0,0,0,10"
                         VerticalAlignment="Top"
                         VerticalContentAlignment="Center"
-                        d:Text="Test"
+                        d:Text="C:\Projekte\TestProjekt"
                         Text="{Binding ProjectPath, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                     <Button Command="{Binding ProjectPathSearchCommand}" Content="Durchsuchen" />
                 </StackPanel>
@@ -40,7 +40,7 @@
                         Margin="0,10,0,0"
                         VerticalAlignment="Top"
                         VerticalContentAlignment="Center"
-                        d:Text="Test"
+                        d:Text="Entity"
                         Text="{Binding EntityName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                     <Button
                         Margin="0,10,0,0"
@@ -65,43 +65,26 @@
                 <StackPanel Orientation="Vertical">
                     <StackPanel Orientation="Horizontal">
                         <Label
-                            Width="100"
+                            Width="150"
                             VerticalContentAlignment="Center"
-                            Content="EntityName" />
+                            Content="Klasse Name - Singular" />
                         <TextBox
-                            Width="250"
+                            Width="250" Text="{Binding EntityName}"
                             VerticalAlignment="Center"
-                            VerticalContentAlignment="Center" />
+                            VerticalContentAlignment="Center"
+                            d:Text="Entity"
+                            IsEnabled="False" />
                     </StackPanel>
                     <StackPanel Orientation="Horizontal">
                         <Label
-                            Width="100"
+                            Width="150"
                             VerticalContentAlignment="Center"
-                            Content="EntityNames" />
+                            Content="Klasse Name - Plural" />
                         <TextBox
-                            Width="250"
+                            Width="250" Text="{Binding EntityNamePlural}"
                             VerticalAlignment="Center"
-                            VerticalContentAlignment="Center" />
-                    </StackPanel>
-                    <StackPanel Orientation="Horizontal">
-                        <Label
-                            Width="100"
                             VerticalContentAlignment="Center"
-                            Content="entityName" />
-                        <TextBox
-                            Width="250"
-                            VerticalAlignment="Center"
-                            VerticalContentAlignment="Center" />
-                    </StackPanel>
-                    <StackPanel Orientation="Horizontal">
-                        <Label
-                            Width="100"
-                            VerticalContentAlignment="Center"
-                            Content="entityNames" />
-                        <TextBox
-                            Width="250"
-                            VerticalAlignment="Center"
-                            VerticalContentAlignment="Center" />
+                            d:Text="Entities" />
                     </StackPanel>
                 </StackPanel>
             </GroupBox>
@@ -125,7 +108,10 @@
                             d:Background="Green"
                             d:Content="OK"
                             Background="{Binding ControllerStatusColor, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                            Content="{Binding ControllerStatus, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                            BorderBrush="Black"
+                            BorderThickness="2"
+                            Content="{Binding ControllerStatus, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                            FontSize="10" />
                         <Button
                             Width="90"
                             Margin="10,0"
@@ -156,8 +142,11 @@
                             VerticalContentAlignment="Center"
                             d:Background="Red"
                             d:Content="FEHLER"
-                            Background="{Binding ServiceInterfaceStatusColor, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                            Content="{Binding ServiceInterfaceStatus, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                            Background="{Binding ServiceStatusColor, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                            BorderBrush="Black"
+                            BorderThickness="2"
+                            Content="{Binding ServiceStatus, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                            FontSize="10" />
                         <Button
                             Width="90"
                             Margin="10,0"
@@ -187,8 +176,11 @@
                             VerticalContentAlignment="Center"
                             d:Background="Green"
                             d:Content="OK"
-                            Background="{Binding ServiceStatusColor, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                            Content="{Binding ServiceStatus, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                            Background="{Binding ServiceImplStatusColor, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                            BorderBrush="Black"
+                            BorderThickness="2"
+                            Content="{Binding ServiceImplStatus, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                            FontSize="10" />
                         <Button
                             Width="90"
                             Margin="10,0"
@@ -219,7 +211,10 @@
                             d:Background="Green"
                             d:Content="OK"
                             Background="{Binding RepositoryStatusColor, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                            Content="{Binding RepositoryStatus, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                            BorderBrush="Black"
+                            BorderThickness="2"
+                            Content="{Binding RepositoryStatus, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                            FontSize="10" />
                         <Button
                             Width="90"
                             Margin="10,0"
@@ -250,7 +245,10 @@
                             d:Background="Green"
                             d:Content="OK"
                             Background="{Binding GetRequestStatusColor, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                            Content="{Binding GetRequestStatus, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                            BorderBrush="Black"
+                            BorderThickness="2"
+                            Content="{Binding GetRequestStatus, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                            FontSize="10" />
                         <Button
                             Width="90"
                             Margin="10,0"
@@ -281,7 +279,10 @@
                             d:Background="Green"
                             d:Content="OK"
                             Background="{Binding AddRequestStatusColor, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                            Content="{Binding AddRequestStatus, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                            BorderBrush="Black"
+                            BorderThickness="2"
+                            Content="{Binding AddRequestStatus, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                            FontSize="10" />
                         <Button
                             Width="90"
                             Margin="10,0"
@@ -312,7 +313,10 @@
                             d:Background="Green"
                             d:Content="OK"
                             Background="{Binding EditRequestStatusColor, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                            Content="{Binding EditRequestStatus, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                            BorderBrush="Black"
+                            BorderThickness="2"
+                            Content="{Binding EditRequestStatus, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                            FontSize="10" />
                         <Button
                             Width="90"
                             Margin="10,0"
@@ -343,7 +347,10 @@
                             d:Background="Green"
                             d:Content="OK"
                             Background="{Binding DeleteRequestStatusColor, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                            Content="{Binding DeleteRequestStatus, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                            BorderBrush="Black"
+                            BorderThickness="2"
+                            Content="{Binding DeleteRequestStatus, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                            FontSize="10" />
                         <Button
                             Width="90"
                             Margin="10,0"
@@ -374,7 +381,10 @@
                             d:Background="Green"
                             d:Content="OK"
                             Background="{Binding SearchRequestStatusColor, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                            Content="{Binding SearchRequestStatus, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                            BorderBrush="Black"
+                            BorderThickness="2"
+                            Content="{Binding SearchRequestStatus, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                            FontSize="10" />
                         <Button
                             Width="90"
                             Margin="10,0"
@@ -405,7 +415,10 @@
                             d:Background="Green"
                             d:Content="OK"
                             Background="{Binding ResponseStatusColor, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                            Content="{Binding ResponseStatus, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                            BorderBrush="Black"
+                            BorderThickness="2"
+                            Content="{Binding ResponseStatus, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                            FontSize="10" />
                         <Button
                             Width="90"
                             Margin="10,0"
